# obscura

./: README.md
crates/obscura-browser/: Cargo.toml
crates/obscura-browser/src/: page.rs
crates/obscura-cdp/src/: server.rs
crates/obscura-cdp/src/domains/: input.rs
crates/obscura-cli/src/: main.rs
crates/obscura-dom/src/: selector.rs
crates/obscura-js/: Cargo.toml
crates/obscura-js/js/: bootstrap.js
crates/obscura-js/src/: ops.rs  runtime.rs
crates/obscura-net/src/: lib.rs  wreq_client.rs
