[package]
name = "obscura-browser"
version.workspace = true
edition.workspace = true

[features]
default = []
stealth = ["obscura-net/stealth", "obscura-js/stealth"]

[dependencies]
obscura-dom = { workspace = true }
obscura-net = { workspace = true }
obscura-js = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
url = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
